<resources>
    <string name="app_name">Food Delivery App</string>
    <string name="onboarding_title">All your favorites</string>
    <string name="onboarding_description">Get all your loved foods in one once place,
you just place the order we do the rest</string>
    <string name="next">NEXT</string>
    <string name="skip">Skip</string>
    <string name="login">Log In</string>
    <string name="sign_in">Please sign in to your existing account</string>
    <string name="email">EMAIL</string>
    <string name="email_example">example@gmail.com</string>
    <string name="password">PASSWORD</string>
    <string name="password_example">* * * * * * * * * *</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">Or</string>
    <string name="please_sign_in">Please sign in to your existing account</string>
    <string name="send_code">SEND CODE</string>
    <string name="code">CODE</string>
    <string name="resend">Resend</string>
    <string name="please_sign_up">Please sign up to get started</string>
    <string name="name">NAME</string>
    <string name="john_doe">john doe</string>
    <string name="retype_password">RE-TYPE PASSWORD</string>
    <string name="access_location">ACCESS LOCATION</string>
    <string name="food_access_location">FOOD DELIVERY WILL ACCESS YOUR LOCATION ONLY WHILE USING THE APP</string>
    <string name="deliver_to">DELIVER TO</string>
    <string name="example_name">Example Name</string>
    <string name="greeting">Hey %1$s, Good Afternoon!</string>
    <string name="search_example">Search dishes, restaurants</string>
    <string name="categories">All Categories</string>
    <string name="see_all">See All</string>
    <string name="all">See All</string>
    <string name="open_restaurants">Open Restaurants</string>
    <string name="restaurants_name_example">Restaurant Name Example</string>
    <string name="food_example">Food Example - Burger - Wings</string>
    <string name="rating">4.7</string>
    <string name="delivery_type">Free</string>
    <string name="delivery_time">20 min</string>
    <string name="hot_dog">Hot Dog</string>
    <string name="search">Search</string>
    <string name="pizza">Pizza</string>
    <string name="recent_keywords">Recent Keyords</string>
    <string name="burger">Burger</string>
    <string name="suggested_restaurants">Suggested Restaurants</string>
    <string name="popular_fast_food">Popular Fast Food</string>
    <string name="hurry_offers">Hurry Offers!</string>
    <string name="coupon_code">#1243CD2</string>
    <string name="coupon_description_template">Use the coupon to get %1$d%% discount</string>
    <string name="got_it">GOT IT</string>
    <string name="popular_burgers">Popular Burgers</string>
    <string name="burger_bistro">Burger Bistro</string>
    <string name="rose_garden">Rose Garden</string>
    <string name="_40">$40</string>
    <string name="smokin_burger">Smokin\' Burger</string>
    <string name="cafenio_restaurant">Cafenio Restaurant</string>
    <string name="_60">$60</string>
    <string name="details">Details</string>
    <string name="uttora_coffe_house">Uttora Coffe House</string>
    <string name="pizza_calzone_european">Pizza Calzone European</string>
    <string name="pizza_description">Prosciutto e funghi is a pizza variety that is topped with tomato sauce.</string>
    <string name="size">SIZE :</string>
    <string name="ten">10\'</string>
    <string name="fourteen">14\'</string>
    <string name="sixteen">16\'</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="_32">$32</string>
    <string name="_2">2</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="restaurant_view">Restaurant View</string>
    <string name="restaurant_description">Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</string>
    <string name="burger_10">Burger(10)</string>
    <string name="filter_your_search">Filter your search</string>
    <string name="offers">OFFERS</string>
    <string name="delivery">Delivery</string>
    <string name="pick_up">Pick Up</string>
    <string name="offer">Offer</string>
    <string name="online_payment_available">Online payment available</string>
    <string name="deliver_time">DELIVER TIME</string>
    <string name="_10_15_min">10-15 min</string>
    <string name="_20_min">20 min</string>
    <string name="_30_min">30 min</string>
    <string name="pricing">PRICING</string>
    <string name="triple_dollar">$$$</string>
    <string name="double_dollar">$$</string>
    <string name="dollar">$</string>
    <string name="Rating">RATING</string>
    <string name="filter">FILTER</string>
    <string name="salt">Salt</string>
    <string name="chicken">Chicken</string>
    <string name="onion">Onion</string>
    <string name="garlic">Garlic</string>
    <string name="pappers">Pappers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="edit_items">EDIT ITEMS</string>
    <string name="done">DONE</string>
    <string name="_64">$64</string>
    <string name="_14">14\'</string>
    <string name="_1">1</string>
    <string name="edit">EDIT</string>
    <string name="_2118_thornridge_cir_syracuse">2118 Thornridge Cir. Syracuse</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="total">TOTAL</string>
    <string name="_96">$96</string>
    <string name="breakdown">Breakdown</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="payment">Payment</string>
    <string name="congratulations">Congratulations!</string>
    <string name="successfull_payment_description">You successfully maked a payment, enjoy our service!</string>
    <string name="your_order">YOUR ORDER</string>
    <string name="cash">Cash</string>
    <string name="no_master_card_added">No master card added</string>
    <string name="you_can_add">You can add a mastercard and save it for later</string>
    <string name="add_new">+ ADD NEW</string>
    <string name="pay_confirm"><![CDATA[PAY & CONFIRM]]></string>
    <string name="master_card">MASTER CARD</string>
    <string name="pin_credit_card_obscured">* * * * * * * * * * * * *</string>
    <string name="_436">436</string>
    <string name="add_card">Add Card</string>
    <string name="card_holder_name">CARD HOLDER NAME</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="mm_yyyy">mm/yyyy</string>
    <string name="cvc">CVC</string>
    <string name="cvc_pin_obscured">***</string>
    <string name="add_make_payment"><![CDATA[ADD & MAKE PAYMENT]]></string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>
    <string name="paypal">Paypal</string>
    <string name="my_orders">My Orders</string>
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="food">Food</string>
    <string name="mcdonald">McDonald</string>
    <string name="_35_25">$35.25</string>
    <string name="_01_items">01 Items</string>
    <string name="_162432">#162432</string>
    <string name="track_order">Track Order</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="re_order">Re-Order</string>
    <string name="completed">Completed</string>
    <string name="_30_jan_12_30">30 JAN, 12:30</string>
    <string name="profile">Profile</string>
    <string name="vishal_khadok">Vishal Khadok</string>
    <string name="i_love_fast_food">I love fast food</string>
    <string name="personal_info">Personal Info</string>
    <string name="addresses">Addresses</string>
    <string name="payment_method">Payment Method</string>
    <string name="log_out">Log Out</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="_408_841_0926">408-841-0926</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">FULL NAME</string>
    <string name="bio">BIO</string>
    <string name="save">SAVE</string>
    <string name="my_address">My Address</string>
    <string name="home">HOME</string>
    <string name="_2464_royal_ln_mesa_new_jersey_45463">2464 Royal Ln. Mesa, New Jersey 45463</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="save_location">SAVE LOCATION</string>
    <string name="address">ADDRESS</string>
    <string name="_3235_royal_ln_mesa_new_jersy_34567">3235 Royal Ln. mesa, new jersy 34567</string>
    <string name="street">STREET</string>
    <string name="post_code">POST CODE</string>
    <string name="hason_nagar">hason nagar</string>
    <string name="_34567">34567</string>
    <string name="apartment">APARTMENT</string>
    <string name="_345">345</string>
    <string name="label_as">LABEL AS</string>
    <string name="home_camelcase">Home</string>
    <string name="work_camelcase">Work</string>
    <string name="other">Other</string>
    <string name="get_started">GET STARTED</string>
    <string name="onboarding_second_title">Order from choosen chef"</string>
    <string name="onboarding_third_title">Free delivery offers"</string>
    <string name="verify">VERIFY"</string>
    <string name="free">Free"</string>
    <string name="resend_in">Resend in %d sec"</string>
    <string name="expire_date">EXPIRE DATE</string>
    <string name="sushi">Sushi</string>
    <string name="month_not_valid">Month not valid!</string>
    <string name="year_not_valid">Year not valid!</string>
    <string name="number_must_be_16">The number must be 16 digits</string>
    <string name="facebook_app_id">2005793646847216</string>
    <string name="fb_login_protocol_scheme">fb2005793646847216</string>
    <string name="facebook_client_token">8cc05fcf9fa84233ec511856270beff9</string>
    <string name="twitter_consumer_key">D8RLo8Kf5OgUrzozVoK9y6hXf</string>
    <string name="twitter_consumer_secret">qSUCY9ffGMsJaiiwOp5MO8ytEMy5UmPIy7AaNOS90iNihoeluq</string>
    <string name="ginger">ginger</string>
    <string name="broccoli">broccoli</string>
    <string name="orange">orange</string>
    <string name="walnut">walnut</string>
    <string name="food_price">$%1$.2f</string>
    <string name="category_food_count">%1$s (%2$d)</string>
    <string name="popular_with_category">Popular %1$s</string>
    <string name="cart_is_empty">"Cart is empty!"</string>
    <string name="select_a_credit_card">"Select a credit card"</string>
    <string name="insufficient_balance">"Insufficient balance"</string>
    <string name="select_a_valid_payment_method">"Select a valid payment method"</string>
    <string name="selected_card">Selected card ending with %1$s</string>
    <string name="are_you_sure_you_want_to_delete_the_address">Are you sure you want to delete the address?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>